# SpaceDog

./: CMakeLists.txt  README.md  Sample_fens.txt  Sample_fens_newPQST.txt  Sample_game_record.tex  Sample_game_record_newPQST.tex  attack.c  bitboards.c  board.c  chess960.c  chess960.h  data.c  defs.h  endgame.c  endgame.h  eval.c  eval.h  evaluate.c  game_record_SANtest3.pgn  game_summary_sample.tex  hashkeys.c  init.c  io.c  main.c  makemove.c  misc.c  movegen.c  perft.c  polybook.c  polykeys.c  polykeys.h  pvtable.c  search.c  syzygy.c  syzygy.h  uci.c  validate.c  xboard.c
fathom/src/: tbcore.c  tbprobe.c
